--- a/src/main/resources/liquibase/v1/changelog-1.0.yml
+++ b/src/main/resources/liquibase/v1/changelog-1.0.yml
@@ -38,6 +38,23 @@ databaseChangeLog:
                   name: is_deleted
                   type: boolean
               - column:
+                  name: username
+                  type: varchar(32)
+                  constraints:
+                    unique: true
+                    nullable: false
+              - column:
+                  name: password
+                  type: varchar(256)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: email
+                  type: varchar(64)
+                  constraints:
+                    unique: true
+                    nullable: false
+              - column:
                   name: created_at
                   type: timestamp
               - column:
